# DataExplorer

./: .gitignore  alembic.ini  app.py  auth.py  docker-compose.yaml  pyproject.toml
agent/: agent.py  llm.py  message_history.py  tools.py
alembic/: env.py
alembic/versions/: 3dd1baf2e6cd_rename_session_to_streamlitsession.py  4b4bb9d37491_add_name_field_to_session.py  e65e053819de_initial_table_creation.py
cache/: cache_db_0.11.db  cache_db_0.9.db
database/: create_database.py  database.py  database_functions.py  models.py
terraform/: main.tf  variables.tf
